--- a/templates/j4starter/css/style.css
+++ b/templates/j4starter/css/style.css
@@ -1,9 +1,21 @@
 .layout_blog{
     max-width: 60rem;
     margin: auto auto;
-    background-color: red;
 }
+
 .layout_blog article .teaser_2col {
     column-count: 2;
-    color: red;
+}
+
+.full{
+    display: none;
+}
+
+.layout_blog .layout2 {
+    display: flex;
+}
+
+.layout2 .marginLeft {
+    margin-left: 2rem;
+    float: left;
 }
